# key-amnesia

./: .gitattributes  .gitignore  DESIGN.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/hooks/: README.md  pre_tool_use_secrets.py
docs/: agent-usage.md
skills/: README.md
skills/chat-secret-privacy/: SKILL.md
skills/using-key-amnesia/: SKILL.md
src/key_amnesia/: __init__.py  __main__.py  audit.py  browser_fill.py  cli.py  clipboard.py  config.py  crypto.py  guard.py  ipc.py  keepass_protocol.py  login_cli.py  logins.py  native_host.py  native_host_install.py  paths.py  platform.py  prompt_route.py  run_exec.py  scrub.py  setup_cmd.py  theme.py  vault.py
src/key_amnesia/hooks/: __init__.py  secret_guard.py
src/key_amnesia/skills/key-amnesia-hygiene/: SKILL.md
src/key_amnesia/skills/key-amnesia-migrate/: SKILL.md
src/key_amnesia/skills/key-amnesia-usage/: SKILL.md
tests/: conftest.py  test_argparse_help_cp1252.py  test_audit_cli.py  test_fill_lifecycle.py  test_foreground_unlock.py  test_guard_admission.py  test_guard_death_reporting.py  test_guard_verbs_regression.py  test_init.py  test_ipc_guard.py  test_keepass_protocol.py  test_login_cli.py  test_logins.py  test_native_host_e2e.py  test_native_host_install.py  test_package_skills_data.py  test_passwd_cmd.py  test_phase0_seams.py  test_posix.py  test_prompt_route.py  test_scrub.py  test_secret_guard.py  test_session.py  test_setup_cmd.py  test_theme.py  test_vault.py  test_vault_migration.py
